2-cloudinit/jitsi3/team5/team-setup/templates/ingress/06-middleware.yaml
---
# Combines all middlewares
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-middlewares
spec:
  chain:
    middlewares:
    - name: traefik-cleanheaders
---
# clean headers
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-cleanheaders
spec:
  headers:
    customResponseHeaders:
      x-powered-by: ""
      server: ""
---
# strip prefix "/web"
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: web-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /web
---
# strip prefix "/who"
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: who-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /who
---
# strip prefix "/video"
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: video-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /video
